--- a/n-89/Cargo.toml
+++ b/n-89/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "n-89"
-version = "1.0.0"
+version = "2.0.0"
 authors = ["lights0123 <developer@lights0123.com>"]
 edition = "2018"
 build = "build.rs"
@@ -15,6 +15,8 @@ failure = { version = "0.1.5",default-features = false, features = ["derive"] }
 cstr_core = { version = "0.1.2", features = ["alloc"] }
 ndless-freetype = "0.1.3"
 unicode-segmentation = "1.3.0"
+zerocopy = "0.2.7"
+byteorder = { version = "1.3", default-features = false }
 
 [package.metadata.zehn]
 name = "n-89"
